--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,7 +10,7 @@ on:
 env:
   CI: true
   DOCKER_USER: ${{ github.actor }}
-  DOCKER_PASS: ${{ secrets.GITHUB_TOKEN }}
+  DOCKER_PASS: ${{ secrets.ADMIN_GITHUB_TOKEN }}
   DOCKER_REG: docker.pkg.github.com
   GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
   GIT_URL: github.com/RainThief/robot-test-libraries.git
